2005-09-12  Paco Martinez <martinf@mfconsulting.com>

	* worker/bloggers.xml: Corrected Daniel Morgan URL information (MFConsulting Web server was upgraded and path changed) 
	
2005-09-11  Eric Butler <eric@extremeboredom.net>

	* worker/monologue-worker.cs: Make RSS Feed include author in post title
	* www/css/monologue.css: Tweaked colors, Removed collapse buttons (because it didnt work properly in safari)
	* worker/bloggers.xml: Added more hackerochi images
	
2005-09-10  John Luke  <john.luke@gmail.com>

	* worker/bloggers.xml: update my feed location
	
2005-09-09  Aaron Bockover  <aaron@aaronbock.net>

	* www/monologue.cs:
	* www/planet.cs:
	* worker/default.tpl: Updates to new layout, implemented in template
	* www/images/monologue-logo.png: A decent logo for monologue
	* worker/monologue-worker.cs: Minor changes to template variable outputs

2005-09-09  Eric Butler <eric@extremeboredom.net>

	* General changes:
	  New look, based on the new mono website and planet gnome
	  Moved files around to make things cleaner
	  Added additional images, including hackergotchis

	* AUTHORS: Added my name
	* worker/monologue-worker.cs: Added support for IRC nicknames and
	hackergotchies. 
	* worker/default.tpl: Updated for new look
	* worker/bloggers.xml: Added many irc nicknames and a few
	hackergotchies
	* www/js/collapse.js: New file, some javascript code to
	expand/collapse posts.
	  
2005-07-10  Jb Evain  <jbevain@gmail.com>

	* worker/blogger.xml: update my feed

2005-07-08 Aaron Bockover <aaron@aaronbock.net>

	* worker/blogger.xml: Disabled two feeds throwing weird Read exception,
	see header I placed in XML file for details.

	* worker/blogger.xml: Added Jeff Tickle's RSS Feed

2005-05-30 Christian Hergert <christian.hergert@gmail.com>

	* worker/blogger.xml: Fix url which had & to use &amp; instead.

2005-04-24 Christian Hergert <christian.hergert@gmail.com>

	* worker/blogger.xml: Add Aaron Bockover's mono rsss feed.
